Add a back end call to save the link

--- a/front/index.html
+++ b/front/index.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="col-md-8">
-                    <div id="add-link-button" class="col-md-2">boutton add</div>
+                    <div id="add-link-button" class="col-md-2"><a href="#/add">boutton add</a></div>
                     <div id="searchbar" class="col-md-9"><input id="link-search-input" class="col-md-12"></input></div>
                     <div id="content" class="col-md-12" style="margin-top: 25px;"></div>
                 </div>
